added encoder driver

--- a/config/boards/shields/keypad16/keypad16.conf
+++ b/config/boards/shields/keypad16/keypad16.conf
@@ -5,7 +5,6 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 # Enable ZMK Studio
 CONFIG_ZMK_STUDIO=y
 
-#Enable Encoder support
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+# Enable custom GPIO encoder kscan driver (encoder as matrix keys)
+CONFIG_ZMK_KSCAN_GPIO_ENCODER=y
 
