--- a/config/boards/shields/keypad16/keypad16.conf
+++ b/config/boards/shields/keypad16/keypad16.conf
@@ -5,5 +5,10 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 # Enable ZMK Studio
 CONFIG_ZMK_STUDIO=y
 
-# Enable custom GPIO encoder kscan driver (encoder as matrix keys)
-CONFIG_ZMK_KSCAN_GPIO_ENCODER=y
+# Encoder driver selection (choose one):
+# Option 1: QDEC driver - uses Zephyr's gpio-qdec for quadrature decoding
+CONFIG_ZMK_KSCAN_GPIO_QDEC=y
+CONFIG_INPUT=y
+
+# Option 2: Direct GPIO encoder driver - does its own quadrature decoding
+# CONFIG_ZMK_KSCAN_GPIO_ENCODER=y
