attempt virtual switches

--- a/config/boards/shields/keypad16/keypad16.conf
+++ b/config/boards/shields/keypad16/keypad16.conf
@@ -5,6 +5,6 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 # Enable ZMK Studio
 CONFIG_ZMK_STUDIO=y
 
-# QDEC driver - uses Zephyr's gpio-qdec for quadrature decoding
-CONFIG_ZMK_KSCAN_GPIO_QDEC=y
+# Virtual kscan - triggered by gpio-qdec input events
+CONFIG_ZMK_KSCAN_VIRTUAL=y
 CONFIG_INPUT=y
